--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=budgettracker
 spring.datasource.url=jdbc:mysql://localhost:3306/budget_tracker
 spring.datasource.username=
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=
+spring.jpa.hibernate.ddl-auto=validate
