--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=budgettracker
 spring.datasource.url=jdbc:mysql://localhost:3306/budget_tracker
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Parool1997!
 spring.jpa.hibernate.ddl-auto=update
